--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@next/font": "13.1.6",
     "apos-to-lex-form": "^1.0.5",
     "axios": "^1.3.2",
+    "chart.js": "^4.4.0",
     "compromise": "^14.8.1",
     "firebase": "^9.17.1",
     "natural": "^6.1.4",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5",
+    "react-toastify": "^9.1.3",
     "request": "^2.88.2",
     "sass": "^1.58.0",
     "sentiment": "^5.0.2",
