--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.5.0",
     "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
